# files-reader-and-writer

./: .gitignore  _types.py  file_metadata.py  file_reader.py  file_writer.py  main.py  paper_sizes.py  pdf_metadata.py  pdf_reader.py  pdf_writer.py  pyproject.toml
